# Exact-Discrete-Geometry-Processing

./: CMakeLists.txt
Documents/IJ-PointInCircle/: ArticleExample.aux  ArticleExample.bbl  ArticleExample.blg  ArticleExample.brf  ArticleExample.dvi  ArticleExample.out  ArticleExample.tex  ArticleExample.toc  InsightJournal.bib
PointInCircle/: CMakeLists.txt  IsPointInCircle.cxx  itkPointInCircleGeometricalPredicateFunctor.h
